adds evolution mechanics and the SO's to do it, fix bug where prefab resets at final evolution stage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "VDO_IGD_Eindproef_Creature.sln"
+    "dotnet.defaultSolution": "vdo_igd_eindproef.sln"
 }
