--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "vdo_igd_eindproef.sln"
+    "dotnet.defaultSolution": "VDO_IGD_Eindproef_Creature.sln"
 }
